--- a/Instagram/PostTableViewCell.xib
+++ b/Instagram/PostTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="504" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="654" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="654"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="503.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="653.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ile-WD-OKB">
@@ -43,7 +43,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lxi-Ve-0dO">
-                        <rect key="frame" x="26" y="389" width="268" height="94"/>
+                        <rect key="frame" x="26" y="389" width="268" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="BYK-kq-o3d"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -54,19 +57,40 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hl6-Ir-7u0">
+                        <rect key="frame" x="126" y="339" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="864-my-gf6"/>
+                            <constraint firstAttribute="width" constant="40" id="aT2-Bx-u3C"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="comment"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DKe-8j-zLt">
+                        <rect key="frame" x="26" y="419" width="268" height="214"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="bAh-Br-MDo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="6aF-TG-YvG"/>
                     <constraint firstItem="MFA-JW-InT" firstAttribute="leading" secondItem="bAh-Br-MDo" secondAttribute="trailing" constant="10" id="7e1-vZ-pJu"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Lxi-Ve-0dO" secondAttribute="trailing" constant="10" id="8PX-Mk-h2f"/>
+                    <constraint firstItem="DKe-8j-zLt" firstAttribute="top" secondItem="Lxi-Ve-0dO" secondAttribute="bottom" constant="10" id="DfR-Qy-L4I"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Tcl-E0-tr7" secondAttribute="trailing" constant="10" id="EPw-ZP-W9p"/>
+                    <constraint firstItem="Hl6-Ir-7u0" firstAttribute="centerY" secondItem="bAh-Br-MDo" secondAttribute="centerY" id="G1r-K7-PEc"/>
                     <constraint firstItem="Ile-WD-OKB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="I9G-x1-4HQ"/>
                     <constraint firstItem="Tcl-E0-tr7" firstAttribute="leading" secondItem="MFA-JW-InT" secondAttribute="trailing" constant="10" id="K8z-92-SrR"/>
                     <constraint firstItem="MFA-JW-InT" firstAttribute="centerY" secondItem="bAh-Br-MDo" secondAttribute="centerY" id="MH5-1P-g4H"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="DKe-8j-zLt" secondAttribute="bottom" constant="10" id="NVw-Sd-r4q"/>
                     <constraint firstItem="bAh-Br-MDo" firstAttribute="top" secondItem="Ile-WD-OKB" secondAttribute="bottom" constant="10" id="Ph3-CR-EHN"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Lxi-Ve-0dO" secondAttribute="bottom" constant="10" id="Sha-v8-v8c"/>
                     <constraint firstItem="Lxi-Ve-0dO" firstAttribute="top" secondItem="bAh-Br-MDo" secondAttribute="bottom" constant="10" id="VEk-se-7oY"/>
+                    <constraint firstItem="Tcl-E0-tr7" firstAttribute="centerY" secondItem="bAh-Br-MDo" secondAttribute="centerY" id="Y7A-qj-fMP"/>
+                    <constraint firstItem="DKe-8j-zLt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="YWI-No-9DE"/>
+                    <constraint firstItem="Hl6-Ir-7u0" firstAttribute="leading" secondItem="MFA-JW-InT" secondAttribute="trailing" constant="10" id="ZzN-RW-WZh"/>
+                    <constraint firstItem="MFA-JW-InT" firstAttribute="centerY" secondItem="bAh-Br-MDo" secondAttribute="centerY" id="f6r-Kg-OTB"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Ile-WD-OKB" secondAttribute="trailing" id="fes-9t-xgJ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="DKe-8j-zLt" secondAttribute="trailing" constant="10" id="fet-UD-ZAS"/>
                     <constraint firstItem="Tcl-E0-tr7" firstAttribute="centerY" secondItem="bAh-Br-MDo" secondAttribute="centerY" id="giz-lz-9Cw"/>
                     <constraint firstItem="Lxi-Ve-0dO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="jOO-ew-NkU"/>
                     <constraint firstItem="Ile-WD-OKB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="yKC-vn-DsZ"/>
@@ -75,15 +99,18 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="captionLabel" destination="Lxi-Ve-0dO" id="dcT-SL-C9I"/>
+                <outlet property="commentButton" destination="Hl6-Ir-7u0" id="qKD-Uh-Azh"/>
+                <outlet property="commentLabel" destination="DKe-8j-zLt" id="qck-1X-kAI"/>
                 <outlet property="dateLabel" destination="Tcl-E0-tr7" id="URu-Hw-yfx"/>
                 <outlet property="likeButton" destination="bAh-Br-MDo" id="qTt-by-D91"/>
                 <outlet property="likeLabel" destination="MFA-JW-InT" id="Myo-wS-Mew"/>
                 <outlet property="postImageView" destination="Ile-WD-OKB" id="JFc-Ie-sMh"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="278.86056971514245"/>
+            <point key="canvasLocation" x="137.59999999999999" y="346.32683658170919"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="comment" width="40" height="40"/>
         <image name="like_none" width="40" height="40"/>
     </resources>
 </document>
